--- a/client/src/html/index.html
+++ b/client/src/html/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 </head>
 
-<body>
+<body class="nopadding">
 	<div id="root"></div>
 </body>
 </html>
