Equipment images added to header

--- a/client/src/html/index.html
+++ b/client/src/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
@@ -8,4 +9,10 @@
 <body class="nopadding">
 	<div id="root"></div>
 </body>
+<footer>
+	<div class="text-center p-3" style="background-color: black">		
+		<p> © 2021 Copyright: Dinose AB &nbsp&nbsp&nbsp&nbsp email: info@vardvagn.se</p>
+	</div>
+</footer>
+
 </html>
